[tool.poetry]
name = "blog_flask_with_selenium_tests"
version = "1.0.0"
description = ""
authors = ["onhorou"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
